--- a/HaveASeat-frontend/src/app/app.component.html
+++ b/HaveASeat-frontend/src/app/app.component.html
@@ -1,5 +1,2 @@
-<div>
-    <app-header (dateChanged)="onDateChanged($event)" [userId]="userId"></app-header>
-    <app-mapa [selectedDate]="selectedDate" [userId]="userId"></app-mapa>
-</div>
+<router-outlet></router-outlet>
 <!-- <app-footer></app-footer> -->
