REGISTRATION FULLY WORKS!!!!
im so happy happy woaoaooawooaowaowoaw next commit of mine will propably be securing page for ppl which wanna go without account

--- a/HaveASeat-frontend/src/app/components/main/main.component.html
+++ b/HaveASeat-frontend/src/app/components/main/main.component.html
@@ -1,4 +1,5 @@
 <div>
-    <app-header (dateChanged)="onDateChanged($event)" [userId]="userId"></app-header>
+<app-header [userId]="userId" (dateChanged)="onDateChanged($event)"></app-header>
+
     <app-mapa [selectedDate]="selectedDate" [userId]="userId"></app-mapa>
 </div>
