--- a/HaveASeat-frontend/src/app/components/header/header.component.html
+++ b/HaveASeat-frontend/src/app/components/header/header.component.html
@@ -46,7 +46,7 @@
     <li class="menu_item">Moje rezerwacje</li>
     @if(!checkifAdmin()){
       <li class="menu_item"> Wszystkie rezerwacje</li>
-      <li class="menu_item"> Edytor biura</li>
+      <li class="menu_item" (click)="GoToEdition()"> Edytor biura</li>
     }
   </ul>
 </div>
