--- a/HaveASeat-frontend/src/app/components/login/login.component.html
+++ b/HaveASeat-frontend/src/app/components/login/login.component.html
@@ -2,5 +2,5 @@
     <input type="text" #email placeholder="Login..." />
     <input type="password" #password placeholder="Password..." /> 
     <button (click)="SignUp(email.value, password.value)">SIGN UP</button>
-    <button >SIGN IN</button>
+    <button (click)="SignIn(email.value, password.value)">SIGN IN</button>
 </div>
