admin panel route
admin machen

--- a/HaveASeat-frontend/src/app/components/header/header.component.html
+++ b/HaveASeat-frontend/src/app/components/header/header.component.html
@@ -45,7 +45,7 @@
   <ul *ngIf="dropdownVisible" class="menu_list">
     <li class="menu_item">Moje rezerwacje</li>
     @if(!checkifAdmin()){
-      <li class="menu_item"> Wszystkie rezerwacje</li>
+      <li class="menu_item" (click)="goToAdminPanel()"> Panel admina</li>
       <li class="menu_item" (click)="GoToEdition()"> Edytor biura</li>
     }
   </ul>
