--- a/HaveASeat-frontend/src/app/components/editor/editor.component.html
+++ b/HaveASeat-frontend/src/app/components/editor/editor.component.html
@@ -1,4 +1,4 @@
 <div>
-    <app-editor-header [userId]="userId"></app-editor-header>
+    <app-header [userId]="userId"></app-header>
     <app-editor-map></app-editor-map>
 </div>
