Delete forbiddendates works
yay :confetti_ball:

--- a/HaveASeat-frontend/src/app/components/admin-dates/admin-dates.component.html
+++ b/HaveASeat-frontend/src/app/components/admin-dates/admin-dates.component.html
@@ -7,7 +7,7 @@
         ADADASDADADADSA
         <div *ngIf="alldates.length > 0">
             <ul>
-              <li *ngFor="let date of alldates"> {{ date }} <button >delete</button></li>
+              <li *ngFor="let date of alldates"> {{ date }} <button (click)="Delete_date(date)" >delete</button></li>
             </ul>
             </div>
     </div>
