--- a/HaveASeat-frontend/src/app/components/header/header.component.html
+++ b/HaveASeat-frontend/src/app/components/header/header.component.html
@@ -7,7 +7,8 @@
     <div class="first_step_text">
       <p class="number_for_instruction">1</p>
       <p class="reservation_date ">Wybierz datę rezerwacji  </p>
-      <input type="date"  id="datecalendar" class=" date_timer open-sans-font" (input)="onDateChange($event)" [value]="today" [min]="today" />
+      <input type="date"  id="datecalendar" class=" date_timer open-sans-font" 
+      (input)="onDateChange($event)" [value]="today" [min]="today" />
     </div>
     <div class="second_step_text">
       <p class="number_for_instruction">2</p>
