--- a/HaveASeat-frontend/src/app/components/editor-map/editor-map.component.css
+++ b/HaveASeat-frontend/src/app/components/editor-map/editor-map.component.css
@@ -51,6 +51,14 @@
     transition: transform 0.3s ease;
     position: absolute;
   }
+
+  .desk-rotate {
+    width:50px;
+    height:50px;
+    display:flex;
+    justify-content: center;
+
+  }
   
   .rotate-right .desk-img {
     transform: rotate(90deg);
