style for rotation selection

--- a/HaveASeat-frontend/src/app/components/editor-map/editor-map.component.html
+++ b/HaveASeat-frontend/src/app/components/editor-map/editor-map.component.html
@@ -7,7 +7,7 @@
             gridRowStart: cell.positionY,
             gridColumnStart: cell.positionX,
             boxShadow: getBorder(room.id, cell.positionY, cell.positionX)
-          }"
+          }"   
           [ngClass]="{
             'desk-cell': cell.isDesk,
             'rotate-right': cell.rotationClass === 'rotate-right',
@@ -29,12 +29,13 @@
     <p class=current-desk>Aktywna komórka: {{ cellx }}, {{ celly }}</p>
     <div *ngIf="!currentCell?.isDesk && currentCell != null">
       <button class="add-desk" (click)="addDesk()">Dodaj biurko</button>
-      <button class="desk-rotate" (click)="rotate(0)"><img src="/assets/images/niebieskiegora.png" alt="Rotate Top Image" class="desk-img" style="--cursor: pointer"></button>
-      <button class="desk-rotate rotate-right" (click)="rotate(1)"><img src="/assets/images/niebieskiegora.png" alt="Rotate Top Image" class="desk-img" style="--cursor: pointer"></button>
-      <button class="desk-rotate rotate-bottom" (click)="rotate(2)"><img src="/assets/images/niebieskiegora.png" alt="Rotate Top Image" class="desk-img" style="--cursor: pointer"></button>
-      <button class="desk-rotate rotate-left" (click)="rotate(3)"><img src="/assets/images/niebieskiegora.png" alt="Rotate Top Image" class="desk-img" style="--cursor: pointer"></button>
-    </div>
-    
+      <div class="rotation-menu">
+        <button class="desk-rotate" (click)="rotate(0)" [ngClass]="{'clicked': currentRotation === 0}"><img src="/assets/images/niebieskiegora.png" alt="Rotate Top Image" class="desk-img" style="--cursor: pointer"></button>
+        <button class="desk-rotate rotate-right" (click)="rotate(1)" [ngClass]="{'clicked': currentRotation === 1}"><img src="/assets/images/niebieskiegora.png" alt="Rotate Top Image" class="desk-img" style="--cursor: pointer"></button>
+        <button class="desk-rotate rotate-bottom" (click)="rotate(2)" [ngClass]="{'clicked': currentRotation === 2}"><img src="/assets/images/niebieskiegora.png" alt="Rotate Top Image" class="desk-img" style="--cursor: pointer"></button>
+        <button class="desk-rotate rotate-left" (click)="rotate(3)" [ngClass]="{'clicked': currentRotation === 3}"><img src="/assets/images/niebieskiegora.png" alt="Rotate Top Image" class="desk-img" style="--cursor: pointer"></button>
+      </div>
+    </div> 
     <button *ngIf="currentCell?.isDesk" class="remove-desk" (click)="removeDesk()">Usuń biurko</button>
   </div>
 </div>
