--- a/HaveASeat-frontend/src/app/components/editor-map/editor-map.component.css
+++ b/HaveASeat-frontend/src/app/components/editor-map/editor-map.component.css
@@ -46,18 +46,25 @@
   
   .desk-img {
     width: 50px;
-    height: 56px;
+    height: 50px;
     object-fit: cover;
     transition: transform 0.3s ease;
     position: absolute;
   }
 
   .desk-rotate {
-    width:50px;
-    height:50px;
-    display:flex;
+    width: 55px;
+    height: 55px;
+    display: flex;
+    margin:5px;
     justify-content: center;
 
+  }
+
+  .rotation-menu {
+    display: flex;
+    width: fit-content;
+    height: fit-content
   }
   
   .rotate-right .desk-img {
