--- a/HaveASeat-frontend/src/app/components/main/main.component.html
+++ b/HaveASeat-frontend/src/app/components/main/main.component.html
@@ -2,7 +2,7 @@
     Log in firstly lol
   </div>
   <div *ngIf="userId !== null">
-    <app-header [userId]="userId" (dateChanged)="onDateChanged($event)"></app-header>
+    <app-header [userId]="userId" [pageSwitch]="0" (dateChanged)="onDateChanged($event)"></app-header>
     <app-mapa [selectedDate]="selectedDate" [userId]="userId"></app-mapa>
   </div>
   
