added list showing users with reservation

--- a/HaveASeat-frontend/src/app/components/main/main.component.html
+++ b/HaveASeat-frontend/src/app/components/main/main.component.html
@@ -4,5 +4,6 @@
   <div *ngIf="userId !== null">
     <app-header [userId]="userId" [pageSwitch]="0" (dateChanged)="onDateChanged($event)"></app-header>
     <app-mapa [selectedDate]="selectedDate" [userId]="userId"></app-mapa>
+    <app-user-list></app-user-list>
   </div>
   
