--- a/HaveASeat-frontend/src/styles.css
+++ b/HaveASeat-frontend/src/styles.css
@@ -14,3 +14,5 @@ body {
       "wdth" 100;
   }
   
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
