--- a/HaveASeat-frontend/src/app/components/editor-map/editor-map.component.scss
+++ b/HaveASeat-frontend/src/app/components/editor-map/editor-map.component.scss
@@ -67,16 +67,22 @@
     height: fit-content
   }
   
-  .rotate-right .desk-img {
-    transform: rotate(90deg);
+  .rotate-right {
+    .desk-img {
+      transform: rotate(90deg);
+    }
   }
   
-  .rotate-bottom .desk-img {
-    transform: rotate(180deg);
+  .rotate-bottom {
+    .desk-img {
+      transform: rotate(180deg);
+    }
   }
   
-  .rotate-left .desk-img {
-    transform: rotate(270deg);
+  .rotate-left {
+    .desk-img {
+      transform: rotate(270deg);
+    }
   }
   
   :hover {
