--- a/HaveASeat-frontend/src/app/components/editor-map/editor-map.component.scss
+++ b/HaveASeat-frontend/src/app/components/editor-map/editor-map.component.scss
@@ -100,3 +100,13 @@
     border: 2px solid rgb(46, 51, 41);
     border-radius: 3px;
   }
+
+  .success {
+    color: white;
+    background: lightgreen;
+  }
+
+  .failure {
+    color:white;
+    background: red;
+  }
