--- a/HaveASeat-frontend/src/app/components/admin-panel/admin-panel.component.html
+++ b/HaveASeat-frontend/src/app/components/admin-panel/admin-panel.component.html
@@ -1,4 +1,4 @@
 <div>
-    <app-header [userId]="userId"></app-header>
+    <app-header [userId]="userId" [pageSwitch]="2"></app-header>
     <app-admin-dates></app-admin-dates>
 </div>
