--- a/HaveASeat-frontend/src/app/components/header/header.component.html
+++ b/HaveASeat-frontend/src/app/components/header/header.component.html
@@ -15,7 +15,7 @@
       <p class="pick_one_seat_text">Wskaż jedno miejsce na mapie aby zarezerwować</p>
     </div>
   </div>
-  <div class="legends">
+  <div class="legends" *ngIf="pageSwitch != 2">
     <p class="legends_text">Legenda</p>
     <div class="legends_descriptions">
       <div class="legend-item">
