--- a/HaveASeat-frontend/src/app/components/editor-map/editor-map.component.scss
+++ b/HaveASeat-frontend/src/app/components/editor-map/editor-map.component.scss
@@ -37,6 +37,7 @@
   
   .place:hover {
     background: rgb(215, 212, 212);
+    cursor: pointer;
   }
   
   .desk-cell {
@@ -85,9 +86,7 @@
     }
   }
   
-  :hover {
-    cursor: pointer;
-  }
+  
   
   img[src="/assets/images/zielonegora.png"]:hover
   {
@@ -109,4 +108,34 @@
   .failure {
     color:white;
     background: red;
+  }
+
+  .desk-menu {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    margin-top: 10vh;
+    align-items: center;
+    display: flex;
+    background-color: #E6EAED;
+    padding:25px;
+    border: 5px #E6EAED solid;
+    border-radius: 15px;
+  }
+  
+  .add-desk {
+    margin-top:25px;
+    margin-left: 26%;
+    margin-right: auto;
+    padding: 10px;
+    font-size: large;
+  }
+
+  .remove-desk {
+    padding: 10px;
+    font-size: large;
+  }
+
+  button:hover {
+    cursor: pointer;
   }
