--- a/HaveASeat-frontend/src/app/components/admin-dates/admin-dates.component.html
+++ b/HaveASeat-frontend/src/app/components/admin-dates/admin-dates.component.html
@@ -1,12 +1,16 @@
 <div id="main_dates_div">
-  <input type="date" id="datecalendar_admin" class="date_timer_admin open-sans-font" [min]="today"
-    [(ngModel)]="pickedDate" />
-  <input type="text" id="ForbiddenDate_desc" placeholder="description" [(ngModel)]="writtendescr">
-  <button (click)="CreateForbiddenDate()">Confirm</button>
-  <div id="forb_dates_list">
+  <div id="add-dates">
+    <h2>Dodaj dzień wolny</h2>
+    <input type="date" id="datecalendar_admin" class="date_timer_admin open-sans-font" [min]="today"
+      [(ngModel)]="pickedDate" />
+    <input type="text" id="ForbiddenDate_desc" placeholder="description" [(ngModel)]="writtendescr">
+    <button (click)="CreateForbiddenDate()">Confirm</button>
+  </div>
+  
+  <div id="dates_list_contaier">
     <div *ngIf="alldates.length > 0">
-      <ul>
-        <li *ngFor="let date of alldates">
+      <ul id="dates_list">
+        <li class="single_date" *ngFor="let date of alldates">
           {{ date }}
           <button (click)="Delete_date(date)">delete</button>
           <button (click)="Change_date(date)">Edit</button>
