dropdown jest teraz po kliknieciu :trollface:

--- a/HaveASeat-frontend/src/app/components/header/header.component.html
+++ b/HaveASeat-frontend/src/app/components/header/header.component.html
@@ -40,7 +40,7 @@
 <p></p>
 </div>
 
-<div id="profile" (mouseenter)="toggleDropdown(true)" (mouseleave)="toggleDropdown(false)">
+<div id="profile" (click)="toggleDropdown()">
   <div id="user">
     <img src="assets/images/avatar.png" alt="User avatar">
     <p id="username">{{username}} {{usersurname}}</p>
