--- a/HaveASeat-frontend/src/styles.css
+++ b/HaveASeat-frontend/src/styles.css
@@ -19,3 +19,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.snackbar {
+    background-color: white;
+    color: black;
+}
