--- a/HaveASeat-frontend/src/app/components/mydialog/mydialog.component.html
+++ b/HaveASeat-frontend/src/app/components/mydialog/mydialog.component.html
@@ -1,7 +1,8 @@
 
     <div mat-dialog-content>
-      <p>{{ data.mycontent }}</p>
+    <p>{{ data.mycontent }}</p>
     </div>
     <div mat-dialog-actions>
-      <button mat-button mat-dialog-close>Close</button>
+        <div *ngIf="data.buttonamount == 1"><button mat-button mat-dialog-close>Close</button></div>
+        <div *ngIf="data.buttonamount == 2"><button mat-button mat-dialog-close (click)="onConfirm()">Confirm</button> <button mat-button mat-dialog-close (click)="onClose()">Cancel</button></div>
     </div>
