--- a/HaveASeat-frontend/src/app/components/admin-dates/admin-dates.component.scss
+++ b/HaveASeat-frontend/src/app/components/admin-dates/admin-dates.component.scss
@@ -32,3 +32,16 @@
     padding: 5px;
     width: 100%;
 }
+button {
+    background-color: whitesmoke;
+    border: #969595 1px solid;
+    border-radius: 5px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+input {
+    background-color: whitesmoke;
+    border: #f5f5f5 2px solid;
+    border-radius: 5px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+}
