--- a/HaveASeat-frontend/src/app/components/admin-dates/admin-dates.component.html
+++ b/HaveASeat-frontend/src/app/components/admin-dates/admin-dates.component.html
@@ -12,7 +12,7 @@
       <ul id="dates_list">
         <li class="single_date" *ngFor="let date of alldates">
           {{ date }}
-          <button (click)="Delete_date(date)">delete</button>
+          <button (click)="Delete_date(date)">Delete</button>
           <button (click)="Change_date(date)">Edit</button>
           <br>
           <input type="text" *ngIf="editedDate === date" id="edited_text">
