--- a/HaveASeat-frontend/src/app/components/header/header.component.html
+++ b/HaveASeat-frontend/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 
 <div class="header open-sans-font">
-  <div class="image">
+  <div class="image" (click)="goToMap()">
     <img src="assets/images/belmondo.png" alt="Logo" class="logo">
   </div>
   <div class="date_with_text" *ngIf="pageSwitch == 0">
