--- a/HaveASeat-frontend/src/app/components/header/header.component.scss
+++ b/HaveASeat-frontend/src/app/components/header/header.component.scss
@@ -9,6 +9,7 @@
     background-color: #F9F9F9;
     padding: 10px 20px;
     margin: 0;
+    cursor: pointer;
   }
   .date_with_text{
     margin-left: 40px;
