--- a/HaveASeat-frontend/src/app/components/user-list/user-list.component.html
+++ b/HaveASeat-frontend/src/app/components/user-list/user-list.component.html
@@ -1,5 +1,5 @@
 <div>
-    Lista użytkowników na dzisiejszy dzień:
+    Lista użytkowników na wybrany dzień:
     <div *ngIf="users_list.length > 0">
         <ul>
           <li *ngFor="let user of users_list"> {{ user }} 
