--- a/HaveASeat-frontend/src/app/components/user-list/user-list.component.scss
+++ b/HaveASeat-frontend/src/app/components/user-list/user-list.component.scss
@@ -7,3 +7,9 @@ ul{
     }
     
 }
+.fulllista{
+    background-color: rgb(221, 197, 197);
+    border-radius: 20px;
+    padding: 40px;
+    float: right;
+}
