--- a/HaveASeat-frontend/src/app/components/header/header.component.scss
+++ b/HaveASeat-frontend/src/app/components/header/header.component.scss
@@ -8,50 +8,10 @@
     align-items: center;
     background-color: #F9F9F9;
     padding: 10px 20px;
+    margin-top: 0;
     margin: 0;
     cursor: pointer;
   }
-  .date_with_text{
-    margin-left: 40px;
-  }
-  .first_step_text{
-    display: flex;
-    margin-top: 9px;
-    margin-left: 5px;
-    margin-bottom: 5px;
-  }
-  .reservation_date{
-    margin-top: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-  .second_step_text{
-    display: flex;
-    margin-top: 20px;
-    margin-left: 5px;
-    margin-right: 5px;
-    
-  } 
-  .pick_one_seat_text{
-    margin-left: 5px;
-    margin-right: 5px;  }
-  .number_for_instruction{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 4px 8px;
-    gap: 10px;
-    width: 15px;
-    height: 22px;
-    background: #E7E7E7;
-    border-radius: 50%;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    margin-bottom: 5px;
-  }
-  
   .left-icon, .right-icon, .logo{
     font-size: 24px;
   }
@@ -59,59 +19,8 @@
     height: 100px;
     width: auto;
   }
- 
-  input[type="date"] {
-    background-color: white;
-  }
-  .square {
-    width: 20px;
-    height: 20px;
-    margin-right: 5px;
-  }
-  
-  .free {
-    background-color: #BAE7B3; 
-  }
-  
-  .reserved {
-    background-color: #E7A3A3; 
-  }
-  
-  .yours {
-    background-color: #00A3FF; 
-  }
-  
-  .legend-item {
-    display: flex;
-    align-items: center;
-    margin-bottom: 5px;
-  }
-  .legends_descriptions{
-    display: flex;
-  }
-  .legends{
-    margin-top: 15px;
-    margin-left: 100px;
-  }
-  .legends_text{
-    margin-bottom: 10px;
-    font-weight: bold;
-    text-align: center;
-    font-family: sans;
-  }
   span{
     margin-right: 5px;
-  }
-
-  .date_timer
-  {
-    border: solid #BBC1C9 1px;
-    border-radius: 3px;
-    padding: 5px;
-    margin-left: 10px;
-  }
-  .pick_one_seat_text{
-    margin-top: 5px;
   }
   #profile {
     margin-left: auto;
