changed forbidden date effect :anguished:
stupid

--- a/HaveASeat-frontend/src/app/components/mapa/mapa.component.scss
+++ b/HaveASeat-frontend/src/app/components/mapa/mapa.component.scss
@@ -78,3 +78,8 @@ img[src="/assets/images/zielonegora.png"]:hover
 simple-snack-bar {
   background-color: white;
 }
+
+.inactive {
+  pointer-events: none;
+  opacity: 0.25;
+}
