--- a/HaveASeat-frontend/src/app/components/mapa/mapa.component.html
+++ b/HaveASeat-frontend/src/app/components/mapa/mapa.component.html
@@ -1,5 +1,5 @@
 
-<div class="room" [style.gridTemplateColumns]="'repeat(' + roomWidth + ', 50px)'">
+<div class="room" [style.gridTemplateColumns]="'repeat(' + roomWidth + ', 50px)'" [ngClass]="{'inactive': forbiddenDate!= null}">
   <ng-container *ngFor="let room of rooms; let rowIndex = index" >
     <ng-container *ngFor="let cell of room.cells; let colIndex = index" style="box-sizing: border-box;">
       <div 
