--- a/HaveASeat-frontend/src/app/components/main/main.component.html
+++ b/HaveASeat-frontend/src/app/components/main/main.component.html
@@ -3,7 +3,7 @@
   </div>
   <div *ngIf="userId !== null">
     <app-header id="header" [userId]="userId" [pageSwitch]="0" (dateChanged)="onDateChanged($event)"></app-header>
-    <app-mapa id="map" [selectedDate]="selectedDate" [userId]="userId"></app-mapa>
-    <app-rightside [userId]="userId" [pageSwitch]="0" (dateChanged)="onDateChanged($event)"></app-rightside>
+    <app-mapa id="map" [selectedDate]="selectedDate" [userId]="userId" [forbiddenDate]="forbiddenDate"></app-mapa>
+    <app-rightside [userId]="userId" [pageSwitch]="0" (dateChanged)="onDateChanged($event)" (forbiddenDate)="onForbiddenDate($event)"></app-rightside>
   </div>
   
