--- a/HaveASeat-frontend/src/app/components/rightside/rightside.component.html
+++ b/HaveASeat-frontend/src/app/components/rightside/rightside.component.html
@@ -1,6 +1,9 @@
 <div class="content-container">
   <app-header id="header" [userId]="userId" [pageSwitch]="0"></app-header>
-  <app-user-list id="list"></app-user-list>
+  <app-user-list id="list" *ngIf="description == ''"></app-user-list>
+  <div class="day-description" *ngIf="description != ''">
+    <h4>Dzień wolny: {{description}}</h4>
+  </div>
   <div class="space_haver"></div>
   <div class="instruction-legends-container">
     <div>
