--- a/HaveASeat-frontend/src/app/components/main/main.component.html
+++ b/HaveASeat-frontend/src/app/components/main/main.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="userId === null">
     Log in firstly lol
   </div>
-  <div *ngIf="userId !== null">
+  <div *ngIf="userId !== null" id="stronka">
     <app-mapa id="map" [selectedDate]="selectedDate" [userId]="userId" [forbiddenDate]="forbiddenDate"></app-mapa>
     <app-rightside [userId]="userId" [pageSwitch]="0" (dateChanged)="onDateChanged($event)" (forbiddenDate)="onForbiddenDate($event)" [description]="forbiddenDate"></app-rightside>
   </div>
