--- a/HaveASeat-frontend/src/app/components/main/main.component.scss
+++ b/HaveASeat-frontend/src/app/components/main/main.component.scss
@@ -1,11 +1,17 @@
-#map, #list{
-    display: flex;
-}
-#list{
-    float: right;
-    margin-right: 10%;
-    margin-top: 5%;
-}
+
 #map{
     float: left;
+}
+#prawa{
+    width: max-content;
+    float: right;
+    margin-top: 0;
+    width: 33%;
+    height: 98vh;
+    border-left: 2px #D5D8DC solid;
+}
+#stronka{
+    width: 100%;
+    height:  98vh;
+    display: flex;
 }
