--- a/HaveASeat-frontend/src/app/components/mapa/mapa.component.scss
+++ b/HaveASeat-frontend/src/app/components/mapa/mapa.component.scss
@@ -9,7 +9,7 @@
   gap: 0px;
   padding: 20px;
   margin: 20px;
-  background-color: #E6EAED;
+  //background-color: #E6EAED;
   justify-content: center;
   flex-wrap: wrap;
   grid-template-columns: 1fr;
@@ -26,7 +26,7 @@
   box-sizing: border-box;
   justify-content: center;
   align-items: center;
-  background-color: #E6EAED;
+  background-color: #ffffff;
   border-collapse: collapse;
 }
 
