--- a/HaveASeat-frontend/src/app/components/header/header.component.scss
+++ b/HaveASeat-frontend/src/app/components/header/header.component.scss
@@ -6,7 +6,7 @@
 .header {
     display: flex;
     align-items: center;
-    background-color: #F9F9F9;
+    background-color: #ffffff;
     padding: 10px 20px;
     margin-top: 0;
     margin: 0;
@@ -46,7 +46,7 @@
     margin-top:8vh;
     position: absolute;
     border:2px solid #BBC1C9;
-    background-color: #F9F9F9;
+    background-color: #ffffff;
     list-style-type:none;
     border-radius:3px;
   }
